2019-1/230/users/4044/executions/1641_1803.log
== TEST (2019-04-09 00:15:22) 
-- CODE:
n = int(float(1. Digite um numero inteiro de 4 digitos: ))

n_1000 = n // 1000
n_100 = (n % 1000) // 100
n_10 = ((n % 1000) % 100) // 10
n_1 = ((n % 1000) % 100) % 10

verif = (n_1*2 + n_10*3 + n_100*4 + n_1000*5) % 11
print(verif)
-- ERROR:
File "XXXX", line 1
    n = int(float(1. Digite um numero inteiro de 4 digitos: ))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 00:15:43) 
-- CODE:
n = int(input("1. Digite um numero inteiro de 4 digitos: "))

n_1000 = n // 1000
n_100 = (n % 1000) // 100
n_10 = ((n % 1000) % 100) // 10
n_1 = ((n % 1000) % 100) % 10

verif = (n_1*2 + n_10*3 + n_100*4 + n_1000*5) % 11
print(verif)
-- EXECUTION TIME:
0.18747
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
